...
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_share" />

        <ImageView
            android:id="@+id/image_view_play_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_word"
            app:layout_constraintStart_toEndOf="@+id/text_view_word"
            app:layout_constraintTop_toTopOf="@+id/text_view_word"
            app:srcCompat="@drawable/ic_sound" />
...
